--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,3 +59,22 @@ en:
   user-profile: "User profile"
   booking-history: "Booking history"
 
+  admin:
+    layout:
+      home: "Admin home"
+      footer: "footer"
+      header: "Toggle navigation"
+      haeder_title: "Manage Page"
+      profile: "Profile"
+      search: "Search ..."
+    sidebar:
+      dashboard: "Dashboard"
+      bus: "Manage Bus"
+      showBus: "Show list bus"
+      addBus: "Add Bus"
+      statistic: "Statistics"
+      schedule: "Manage schedule"
+      showSchedule: "Show list schedule"
+      addSchedule: "Add schedule"
+      statisticSchedule: "Statistics schedule"
+      statisticPassenger: "Statistics passenger"
