--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -60,3 +60,23 @@ vi:
   select-interval: "Chọn khung giờ"
   user-profile: "Thông tin người dùng"
   booking-history: "Lịch sử đặt vé"
+
+  admin:
+    layout:
+      home: "Admin home"
+      footer: "footer"
+      header: "Toggle navigation"
+      haeder_title: "Manage Page"
+      profile: "Profile"
+      search: "Search ..."
+    sidebar:
+      dashboard: "Dashboard"
+      bus: "Manage Bus"
+      showBus: "Show list bus"
+      addBus: "Add Bus"
+      statistic: "Statistics"
+      schedule: "Manage schedule"
+      showSchedule: "Show list schedule"
+      addSchedule: "Add schedule"
+      statisticSchedule: "Statistics schedule"
+      statisticPassenger: "Statistics passenger"
