admin filter schedule

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,6 +59,13 @@ en:
   user-profile: "User profile"
   booking-history: "Booking history"
 
+  date:
+    formats:
+      date_month_year_concise: "%d-%m-%Y"
+      default: "%Y-%m-%d"
+      short: "%b %d"
+      long: "%B %d, %Y"
+
   admin:
     layout:
       home: "Admin home"
@@ -78,6 +85,28 @@ en:
       addSchedule: "Add schedule"
       statisticSchedule: "Statistics schedule"
       statisticPassenger: "Statistics passenger"
+    schedule:
+      title: "Schedules"
+      list_schedule: "List schedules"
+      filter: "Filter  "
+      filter_by_route: "Filter by route"
+      filter_by_road: "Filter by road"
+      filter_by_interval: "Filter by interval"
+      add: "Add schedule"
+      table:
+        stt: "Index"
+        origin: "Origin"
+        destination: "Destination"
+        date: "Date"
+        time_start: "Time start"
+        time_during: "Time during"
+        hour: " hour"
+        price: "Price (vnd)"
+        stts: "Status"
+        action: "action"
+      status:
+        doing: "doing"
+        done: "done"
   devise:
     failure:
       user:
