--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -62,6 +62,12 @@ vi:
   profile: "Thông tin người dùng"
   booking-history: "Lịch sử đặt vé"
 
+  date:
+    formats:
+      date_month_year_concise: "%d-%m-%Y"
+      default: "%Y-%m-%d"
+      short: "%b %d"
+      long: "%B %d, %Y"
 
   admin:
     layout:
@@ -82,6 +88,28 @@ vi:
       addSchedule: "Add schedule"
       statisticSchedule: "Statistics schedule"
       statisticPassenger: "Statistics passenger"
+    schedule:
+      title: "Lịch trình"
+      list_schedule: "Danh sách lịch trình xe "
+      filter: "Lọc  "
+      filter_by_route: "Lọc theo chặng đường"
+      filter_by_road: "Lọc theo cung đường"
+      filter_by_interval: "Lọc theo khung giờ"
+      add: "Thêm lịch trình"
+      table:
+        stt: "STT"
+        origin: "Bến đi"
+        destination: "Bến đến"
+        date: "Ngày đi"
+        time_start: "Giờ đi"
+        time_during: "Thời gian đi"
+        hour: " tiếng"
+        price: "Giá (vnd)"
+        stts: "Trạng thái"
+        action: "Thao tác"
+      status:
+        doing: "Sắp đi/Đang đi"
+        done: "Đã đi"
 
   devise:
     failure:
