admin create schedule

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,6 +138,25 @@ en:
         at: "at: "
         location: "Location: "
         detail_seated: "Detail seated"
+      create:
+        step1: "Step 1"
+        step2: "Step 2"
+        step_final: "Step final"
+        select_road: "Select road"
+        select_sth: "Select something"
+        select_route: "Select route"
+        select_origin: "Select pick address origin"
+        select_destination: "Select pick address destination"
+        next: "Next"
+        back: "Back"
+        select_date: "Select date"
+        interval: "Select interval"
+        time_start: "Select time start"
+        time_during: "Select time during"
+        select_bus: "Select bus"
+        price: "Price (vnd)"
+        description: "Description"
+        submit: "Submit form"
     booked:
       stt: "Index"
       customer: "Customer phone"
