--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -155,6 +155,25 @@ vi:
         at: "Lúc: "
         location: "Tại: "
         detail_seated: "(Xem)"
+      create:
+        step1: "Step 1"
+        step2: "Step 2"
+        step_final: "Step final"
+        select_road: "Chọn cung đường đi"
+        select_sth: "Chọn"
+        select_route: "Chọn tuyến đường đi"
+        select_origin: "Chọn điểm lên"
+        select_destination: "Chọn điểm xuống"
+        next: "Tiếp tục"
+        back: "Quay lại"
+        select_date: "Chọn ngày đi"
+        interval: "Chọn khung giờ xuất phát"
+        time_start: "Thời gian xuất phát"
+        time_during: "Thời gian đi"
+        select_bus: "Chọn xe cho chuyến đi"
+        price: "Giá vé (vnd)"
+        description: "Mô tả thêm"
+        submit: "Submit form"
     booked:
       stt: "STT"
       customer: "SĐT Khách hàng"
