--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -67,6 +67,7 @@ vi:
   slot: "chỗ"
   day: "ngày"
   remain: "Còn"
+  detail: "Chi tiết"
 
   date:
     formats:
@@ -85,30 +86,30 @@ vi:
 
   admin:
     layout:
-      home: "Admin home"
+      home: "Trang chủ"
       footer: "footer"
       header: "Toggle navigation"
-      haeder_title: "Manage Page"
-      profile: "Profile"
-      search: "Search ..."
+      haeder_title: "Trang quản lý"
+      profile: "thông tin"
+      search: "Tìm kiếm ..."
       go_home: " Trở về trang chủ"
       hi_admin: "Chào admin"
     error:
-      invalid_schedule: "Không tìm thấy schedule!"
+      invalid_schedule: "Không tìm thấy lịch trình!"
     stt:
       now: "ĐANG ĐI"
       will_do: "SẮP ĐI"
     sidebar:
-      dashboard: "Dashboard"
-      bus: "Manage Bus"
-      showBus: "Show list bus"
-      addBus: "Add Bus"
-      statistic: "Statistics"
-      schedule: "Manage schedule"
-      showSchedule: "Show list schedule"
-      addSchedule: "Add schedule"
-      statisticSchedule: "Statistics schedule"
-      statisticPassenger: "Statistics passenger"
+      dashboard: "Bảng điều khiển"
+      bus: "Quản lý xe"
+      showBus: "Danh sách xe"
+      addBus: "Thêm xe"
+      statistic: "Thống kê"
+      schedule: "Quản lý lịch trình"
+      showSchedule: "Danh sách các lịch trình"
+      addSchedule: "Thêm lịch trình"
+      statisticSchedule: "Thống kê lịch trình"
+      statisticPassenger: "Thống kê khách hàng"
     schedule:
       title: "Lịch trình"
       list_schedule: "Danh sách lịch trình xe "
