--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -222,6 +222,13 @@ en:
         seats: "Number of seats"
         detail: "Detail"
         model_id: "Model ID"
+      new: "Create new bus"
+      enter_input_name: "Enter name of bus"
+      name: "Name of bus"
+      number_of_seats: "Number of seats"
+      number_of_floors: "Number of floors"
+      model: "Model"
+      create_bus: "Create bus"
   devise:
     failure:
       user:
