--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -137,7 +137,8 @@ en:
         time_start: "Time start"
         time_end: "Time end"
         time_during: "Time during"
-        hour: " hour"
+        hour: " hours"
+        minute: " minutes"
         price: "Price (vnd)"
         stts: "Status"
         action: "action"
