--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,19 @@
 en:
+  log_in: "Log in"
+  log_out: "Log out"
+  sign_up: "Sign up"
+  enter_username: "Enter username"
+  username: "Username"
+  enter_password: "Enter password"
+  password: "Password"
+  password_confirm: "Confirmation password"
+  forgot_password: "Forgot your password?"
+  welcome: "Welcome to Forum!"
+  send_reset_password: "Send reset password"
+  submit: "Submit"
+  confirm_password: "Confirm new password"
+  change_password: "Change my password"
+  new_password: "New password"
   profile: "Profile"
   app_name: "Ticket Booking"
   home_page: "Home"
