--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,4 +1,19 @@
 vi:
+  log_in: "Đăng nhập"
+  log_out: "Đăng xuất"
+  sign_up: "Đăng kí"
+  enter_username: "Điền tên đăng nhập"
+  username: "Tên đăng nhập"
+  enter_password: "Điền mật khẩu"
+  password: "Mật khẩu"
+  password_confirm: "Xác nhận mật khẩu"
+  forgot_password: "Quên mật khẩu?"
+  welcome: "Chào mừng đến với Booking Bus!!!"
+  send_reset_password: "Gửi mật khẩu cập nhật"
+  submit: "Gửi"
+  confirm_password: "Xác nhận mật khẩu mới"
+  change_password: "Thay đổi mật khẩu"
+  new_password: "Mật khẩu mới"
   profile: "Hồ sơ"
   app_name: "Đặt vé xe"
   home_page: "Trang chủ"
